# SmartFoosball

./: .gitignore  ExampleVideo.avi  README.md  TODO.md  camera_test.py  env.py  generate_data.py  pyproject.toml  run.py  run_system.py  run_web.py  run_yolo.py  train_yolo.py  yolo.py
SmartFoosball/: run.py
backend/: detection.py  detectionSettings.py  game.py  gameSettings.py  imaging.py  misc.py  staticulator.py  staticulatorSettings.py  test_aruco_photo.py  test_aruco_video.py
data/video/: README.md
database/: database.py  database.sql  example.py  install.py  queries.py
database/tests/: coordinateDatbaseTest.py  databaseTest.py
datasets/: README.md
game/: game.py
hardware/: aduino.py  arduino.py  arduinoCode  camera.py  hardware.py  mqtt_connection.py  test_scorekeeping.py
hardware/arduinoCode/: arduinoCode.ino  arduinoCode.ino.example  lights.ino
imageProcessing/: detectBall.py  detection.py  imaging.py  misc.py  test_aruco_video.py  yolo.py
info/: POSTGRES.md
runs/detect/LaserFog15/: args.yaml  results.csv
runs/detect/laserfog/: args.yaml  results.csv
runs/detect/laserfog_long/: args.yaml  results.csv
runs/detect/laserfog_v11/: args.yaml  results.csv
runs/detect/train1/: args.yaml  results.csv
tests/hardware/: test_scorekeeping.py
website/: camera_test.py  flask_website.py  irisfile.py
website/templates/: Styles.css  feedpage.html  fullpage.html  index.html  infopage.html  kickerpage.html
